# TRE-FX-Analytics

./: .gitignore  API_REFERENCE.md  LICENSE.md  README.md  TES_gen.py  analysis_engine.py  data_processor.py  demo_analysis_classes.py  demo_query_separation.py  env.example  minio_client.py  pyproject.toml  query_builder.py  requirements.txt  statistical_analyzer.py  tes_client.py
tests/: conftest.py  test_analysis_compatibility.py  test_refactored.py
